--- a/css/price.css
+++ b/css/price.css
@@ -126,4 +126,79 @@
 .layout .footer .footer_download > span {
   color: #5a5a5a;
 }
-/*# sourceMappingURL=common.css.map */
+
+.ratiopriceItems {
+  width: 100%;
+  margin-top: 120px;
+}
+
+.ratiopriceItems a:hover,
+.ratiopriceItems a:focus {
+  text-decoration: none;
+}
+
+.ratiopriceItems .panel-default > .panel-heading {
+  position: relative;
+  background-color: #ededed;
+  padding: 0;
+  width: 100%;
+}
+
+.ratiopriceItems .panel-default > .panel-heading .panel-title .button {
+  display: block;
+  width: 100%;
+  height: 50px;
+  line-height: 50px;
+  height: 100%;
+  padding-left: 20px;
+}
+
+.ratiopriceItems .panel-default > .panel-heading .down {
+  position: absolute;
+  bottom: 10px;
+  right: 20px;
+  font-size: 18px;
+  line-height: 40px;
+}
+
+.ratiopriceItems .panel + .panel {
+  margin-top: 0;
+}
+
+.ratiopriceItems .panel-title > a,
+.ratiopriceItems .panel-title > small,
+.ratiopriceItems .panel-title > .small,
+.ratiopriceItems .panel-title > small > a,
+.ratiopriceItems .panel-title > .small > a {
+  color: #000;
+  font-weight: 700;
+}
+
+.ratiopriceItems .panel-body {
+  width: 100%;
+  padding: 0;
+}
+
+.ratiopriceItems .panel-body ul {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.ratiopriceItems .panel-body ul > li {
+  width: 33.33%;
+  text-align: center;
+  font-size: 14px;
+  border: 1px solid #cccccc;
+}
+
+.ratiopriceItems .panel-body ul > li a {
+  display: block;
+  width: 100%;
+  color: #000;
+  line-height: 50px;
+}
+/*# sourceMappingURL=price.css.map */
